--- a/public/index.html
+++ b/public/index.html
@@ -6,20 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title><%= htmlWebpackPlugin.options.title %></title>
-    <!-- Google Tag Manager -->
-    <script>
-      (function (w, d, s, l, i) {
-        w[l] = w[l] || [];
-        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
-        var f = d.getElementsByTagName(s)[0],
-          j = d.createElement(s),
-          dl = l != "dataLayer" ? "&l=" + l : "";
-        j.async = true;
-        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
-        f.parentNode.insertBefore(j, f);
-      })(window, document, "script", "dataLayer", "GTM-P76BKZV");
-    </script>
-    <!-- End Google Tag Manager -->
+
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"
@@ -28,6 +15,20 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"
     />
+    <style>
+      *::-webkit-scrollbar {
+        width: 10px; /* width of the entire scrollbar */
+      }
+      *::-webkit-scrollbar-track {
+        background: rgb(106 106 106 / 46%);
+        border-radius: 20px;
+      }
+      *::-webkit-scrollbar-thumb {
+        background-color: inherit;
+        border-radius: 20px;
+        border: 2px solid rgb(106 106 106 / 46%);
+      }
+    </style>
   </head>
   <body>
     <noscript>
@@ -37,16 +38,7 @@
         continue.</strong
       >
     </noscript>
-    <!-- Google Tag Manager (noscript) -->
-    <noscript
-      ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-P76BKZV"
-        height="0"
-        width="0"
-        style="display: none; visibility: hidden"
-      ></iframe
-    ></noscript>
-    <!-- End Google Tag Manager (noscript) -->
+
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
